<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:layout_marginLeft="8dp"
    tools:context=".TimerActivity">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            />
        <Spinner
            android:id="@+id/hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            />
        <Spinner
            android:id="@+id/minuite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            />
        <Spinner
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </TableRow>
    <TableRow><Button
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:onClick="updateTextView"
        style="@style/saveButtonsColor"
        android:layout_margin="10dp"/></TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00:00"
        android:textSize="56sp"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_gravity="center"
        android:id="@+id/txtView"
        android:layout_marginLeft="50dp"

        android:layout_margin="10dp"/>
    <TableRow>
    <Button
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/btnStart"
        android:onClick="onClickStart"
        android:layout_margin="10dp"
        style="@style/timerButtonsColor"
        />
</TableRow>
    <TableRow>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:layout_gravity="center"
        android:onClick="onClickPause"
        android:id="@+id/btnPause"
        android:layout_margin="10dp"
        style="@style/pauseButtonsColor"
        />
</TableRow>
    <TableRow>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_gravity="center"
        android:onClick="onClickStop"
        android:id="@+id/btnStop"
        android:layout_margin="10dp"
        style="@style/cancelButtonsColor"
        /></TableRow>
</TableLayout>